 * Lib: btc.GetSigOpCount() now aborts counting on OP_RETURN (was wrongly rejecting testnet block #1971687)
 * Wallet: New command line switch "-cfg <fname>" to overwrite env's GOCOIN_WALLET_CONFIG variable
 * Wallet: No longer neccessary to add "-segwit" command line switch for "-bech32" to work

1.9.8 - 2020-07-09
* New tools "utxo_compress" and "utxo_decompress" to compress/decompress UTXO.db file
* Client: works with either compressed or uncompressed UTXO records, depending on the format of UTXO.db file
* lib/utxo: added functions for dealing with compressed UTXO records, in new file unspent_recc.go
* lib: removed btc.ReadAll() and using io.ReadFull() instead
* lib/btc: added CompressAmount() and DecompressAmount() as used by Core's new "dumptxoutset" API
* lib/script: added CompressScript() and DecompressScript() as used by Core's new "dumptxoutset" API
* Client: new config value "Net.BindToIF"
* Client / lib: Fixed a bug that was stopping multi-CPU platforms from paralell processing of the blocks
* lib/secp256k1: Improved perfomance (for 64-bits platforms) with the new 5x52 mode
* Client: fixed issue #47 - panic in network.LimitRejectedSize()
* Client: do not call network.LimitRejectedSize() at every rejected tx, as it can cause performance problems
* Fixed performance problem of slow mempool sorting with CPFP algo (packages are now built from parents, not children)

1.9.7 - 2020-03-23
* Client: does not allow to enable wallet functionality while blockchain sync in progress
* Client: applying blocks stored on disk to UTXO-db is a non-blocking process now (UI works)
* Wallet: fixed problem with "Transaction is corrupt" error for segwit txs

1.9.6 - 2019-10-11:
* Client: New config value "Memory.PurgeUnspendableUTXO" - automatically purge unspendable records from UTXO.db
  Note: execute TextUI commad "purge" to purge older unspendale records.
* Client: "auth" messages carry last valid block data and the receiving peer can act upon it accordingly